Cache block types